[package]
name = "arcpool"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
static_assertions = "1.1.0"

[features]
force-safe-api = []


# Dependencies for benchmark suite
[dev-dependencies]
sharded-slab = "0.1"
object-pool = "0.5"
criterion = "0.5.1"
criterion-plot = "0.5"
lockfree-object-pool = "0.1"
rand = "0.8"
hecs = "0.10"

[[bench]]
name = "bench"
harness = false
